<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView
            android:layout_width="163dp"
            android:layout_height="30dp"
            android:id="@+id/view_min_tem"
            android:text=""
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintStart_toEndOf="@+id/min_temp"
            android:layout_marginStart="28dp" android:layout_marginTop="136dp"/>

    <EditText
            android:layout_width="363dp"
            android:layout_height="52dp"
            android:id="@+id/search_bar_days"
            android:hint="@string/forecast_day"
            tools:layout_editor_absoluteX="16dp" tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/search_bar" app:layout_constraintBottom_toTopOf="@+id/button"/>
    <TextView
            android:layout_width="164dp"
            android:layout_height="30dp"
            android:id="@+id/view_max_temp"
            android:text="" android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toEndOf="@+id/max_temp"/>
    <EditText
            android:layout_width="372dp"
            android:layout_height="65dp"
            android:id="@+id/search_bar"
            android:hint="@string/city_name" tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintHorizontal_bias="0.41" app:layout_constraintVertical_bias="0.227"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.366"
            android:text="@string/update_data_weather"
            android:onClick="updateDataWeather"
            tools:ignore="OnClick" android:id="@+id/button"/>
    <TextView
            android:layout_width="190dp"
            android:layout_height="33dp"
            android:id="@+id/max_temp"
            android:text="@string/max_temp" android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:layout_width="190dp"
            android:layout_height="33dp"
            android:id="@+id/min_temp"
            android:text="@string/min_temp" android:layout_marginTop="136dp"
            app:layout_constraintTop_toBottomOf="@+id/button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:layout_width="379dp"
            android:layout_height="190dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintVertical_bias="0.934"
            android:id="@+id/daily_forecast_data"
            android:text=""/>

</androidx.constraintlayout.widget.ConstraintLayout>